Populate recipe details/show page with data using thymeleaf processing Add more url,servings data in bootstrap Fix index panel